gaussclaw/crates/gaussclaw-tui/src/snapshots/gaussclaw_tui__tests__after_one_turn.snap
---
source: gaussclaw/crates/gaussclaw-tui/src/lib.rs
assertion_line: 1207
expression: buffer_text(&buf)
---
 GaussClaw  v0.0.1  — Hermes port on Gauss-Aether                               
 session=s1  model=anthropic/claude-3.5-sonnet  turn=1  chain=cafef00d  taint=us
────────────────────────────────────────────────────────────────────────────────
 · Welcome to GaussClaw. Type a message, or `/help` for a tour of slash         
commands.                                                                       
 › hello world                                                                  
 ◀ (stub) No provider attached to this surface. Run `gaussclaw serve` or wire a 
TurnDispatcher. Current model: anthropic/claude-3.5-sonnet, taint floor: user.  
────────────────────────────────────────────────────────────────────────────────
┌ input ───────────────────────────────────────────────────────────────────────┐
│ Type a message. Enter to submit · Shift+Enter to insert newline · /help for c│
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
