gaussclaw/crates/gaussclaw-tui/src/snapshots/gaussclaw_tui__tests__welcome_screen.snap
---
source: gaussclaw/crates/gaussclaw-tui/src/lib.rs
assertion_line: 788
expression: buffer_text(&buf)
---
 GaussClaw  v0.0.1  — Hermes port on Gauss-Aether                               
 session=s1  model=anthropic/claude-3.5-sonnet  turn=0  chain=deadbeef  taint=⊥ 
────────────────────────────────────────────────────────────────────────────────
 · Welcome to GaussClaw. Type a message, or `/help` for a tour of slash         
commands.                                                                       
                                                                                
────────────────────────────────────────────────────────────────────────────────
┌ input ───────────────────────────────────────────────────────────────────────┐
│ Type a message. Enter to submit · Shift+Enter to insert newline · /help for c│
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
